test/files/neg/macro-reify-groundtypetag-hktypeparams-notags.check
Test.scala:5: error: No GroundTypeTag available for C[T]
    println(implicitly[GroundTypeTag[C[T]]])
                      ^
Test.scala:6: error: No GroundTypeTag available for List[C[T]]
    println(implicitly[GroundTypeTag[List[C[T]]]])
                      ^
two errors found
